--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -7,6 +7,6 @@ layout: default
 {{ content }}
 
 {% for post in site[page.type][page.collection] %}
-{{ post.date | date: "%B %d, %Y" }}  
+{{ post.date | date: "%B %-d, %Y" }}  
 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 {% endfor %}
